# t402-site

./: .dockerignore  .env.example  .gitignore  BUG_BOUNTY.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PROJECT-IDEAS.md  README.md  ROADMAP.md  SECURITY.md  eslint.config.mjs  next.config.ts  open-next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.json  wrangler.jsonc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  new_chain.yml
.github/workflows/: check_python.yml  deploy.yml  facilitator.yml  go_release.yml  npm_release.yml  publish_npm_coinbase_x402.yml  publish_npm_scoped_x402_axios.yml  publish_npm_scoped_x402_core.yml  publish_npm_scoped_x402_evm.yml  publish_npm_scoped_x402_express.yml  publish_npm_scoped_x402_extensions.yml  publish_npm_scoped_x402_fetch.yml  publish_npm_scoped_x402_hono.yml  publish_npm_scoped_x402_next.yml  publish_npm_scoped_x402_paywall.yml  publish_npm_scoped_x402_svm.yml  publish_npm_x402.yml  publish_npm_x402_axios.yml  publish_npm_x402_express.yml  publish_npm_x402_fetch.yml  publish_npm_x402_hono.yml  publish_npm_x402_next.yml  publish_pypi_x402.yml  python_release.yml  site.yml  unit_tests.yml
app/: globals.css  layout.tsx  page.tsx
app/brand/: BrandClient.tsx  page.tsx
app/chains/: ChainsClient.tsx  data.ts  page.tsx
app/compare/: CompareClient.tsx  page.tsx
app/components/: AnimatedSectionHeader.tsx  CTA.tsx  CodeExamples.tsx  CodeSnippet.tsx  ComparisonTable.tsx  EcosystemPreview.tsx  FAQ.tsx  FeatureCard.tsx  FeatureDeepDives.tsx  Footer.tsx  HTTPNativeSection.tsx  Hero.tsx  HeroIllustration.tsx  HeroSection.tsx  HowItWorks.tsx  Logo.tsx  NavBar.tsx  NavDropdown.tsx  Stats.tsx  StatsSection.tsx  Testimonials.tsx  UseCasesPreview.tsx  ValueProps.tsx
app/design-system/: index.ts  tokens.ts
app/ecosystem/: EcosystemClient.tsx  data.ts  page.tsx
app/facilitator/: index.ts
app/facilitator/supported/: route.ts
app/facilitator/verify/: route.ts
app/features/: FeaturesClient.tsx  data.ts  page.tsx
app/features/gasless/: page.tsx
app/features/multisig/: page.tsx
app/playground/: PlaygroundClient.tsx
app/protected/: page.tsx
app/sdks/: SDKsClient.tsx  data.ts  page.tsx
app/use-cases/: UseCasesClient.tsx  data.ts  page.tsx
app/writing/: WritingClient.tsx  page.tsx
app/writing/t402-launch/: page.tsx
app/writing/x402-v2-launch/: page.tsx
docs/: .env.example  .gitignore  QA_REPORT.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js  theme.config.tsx
docs/pages/: _meta.ts  faq.mdx  index.mdx
docs/pages/advanced/: _meta.ts  bridge.mdx  gasless.mdx  mcp.mdx
docs/pages/chains/: index.mdx
docs/pages/getting-started/: _meta.ts  client.mdx  concepts.mdx  installation.mdx  quickstart.mdx  server.mdx
docs/pages/reference/: _meta.ts  core.mdx  evm.mdx  index.mdx  ton.mdx  tron.mdx  wdk.mdx
docs/pages/sdks/: _meta.ts  (+2 more)
e2e/: package.json  pnpm-lock.yaml  test.ts
e2e/extensions/: bazaar.ts
e2e/legacy/clients/httpx/: main.py  pyproject.toml  test.config.json
e2e/legacy/clients/requests/: main.py  pyproject.toml  test.config.json
e2e/legacy/servers/flask/: main.py  pyproject.toml  test.config.json
e2e/src/: discovery.ts  logger.ts  sampling.ts  types.ts
examples/python/legacy/clients/requests/: README.md  extensible.py  main.py  pyproject.toml
examples/python/legacy/discovery/: README.md  main.py  pyproject.toml
examples/python/legacy/fullstack/fastapi/: README.md  main.py  pyproject.toml
examples/python/legacy/fullstack/flask/: README.md  main.py  pyproject.toml
examples/python/legacy/servers/advanced/: README.md  main.py  pyproject.toml
examples/python/legacy/servers/mainnet/: README.md  main.py  pyproject.toml
examples/typescript/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
go/: .golangci.yml  CLIENT.md  CONTRIBUTING.md  FACILITATOR.md  README.md  SERVER.md  client.go  client_hooks.go  client_test.go  constants.go  errors.go  facilitator.go  facilitator_hooks.go  facilitator_hooks_test.go  facilitator_test.go  go.mod  interfaces.go  server.go  server_hooks.go  server_hooks_test.go  server_test.go  types.go  utils.go  utils_test.go
go/extensions/: README.md
go/http/: client.go  client_test.go  dynamic_test.go  evm_paywall_template.go  facilitator_client.go  facilitator_client_test.go  http.go  server.go  server_test.go  svm_paywall_template.go
go/legacy/: README.md  go.mod
go/mechanisms/: README.md
go/signers/: README.md
go/types/: raw.go  v1.go  v2.go
java/: README.md  pom.xml
lib/: animations.tsx
public/: _redirects  robots.txt  site.webmanifest  sitemap.xml
python/: CONTRIBUTING.md
python/t402/: README.md  pyproject.toml
python/t402/src/t402/: __init__.py
python/t402/src/t402/erc4337/: __init__.py  accounts.py  bundlers.py  paymasters.py  types.py
python/t402/src/t402/fastapi/: middleware.py
python/t402/src/t402/flask/: middleware.py
python/t402/src/t402/wdk/: __init__.py  chains.py  errors.py  signer.py  types.py
python/t402/tests/: test_wdk.py
python/x402/: README.md  pyproject.toml
services/facilitator/: .env.example  .env.prod.example  Caddyfile  Dockerfile  README.md  deploy.sh  docker-compose.prod.yaml  docker-compose.yaml  go.mod  go.sum  prometheus.yml
specs/: CONTRIBUTING.md  README.md  t402-specification-v1.md  t402-specification-v2.md  transport_template.md
specs/transports-v1/: a2a.md  http.md  mcp.md
specs/transports-v2/: a2a.md  http.md  mcp.md
t402-reserve/: 00-MASTER-PLAN.md  01-MIGRATION-GUIDE.md  02-TECHNICAL-ARCHITECTURE.md  03-USDT-SUPPORT.md  04-WDK-INTEGRATION.md  05-ROADMAP.md  06-API-SPECIFICATION.md  generate-packages.sh  packages.json  publish-all.sh  publish-with-otp.sh
t402-reserve/scripts/: migrate.sh
t402-reserve/t402/: README.md  index.d.ts  index.js  package.json
types/: viem.d.ts
typescript/: CONTRIBUTING.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
typescript/site/: .dockerignore  CHANGELOG-v2.md  Dockerfile  README.md  package.json
(+484 files in other folders)
