[project]
name = "t402"
version = "1.3.0"
description = "t402: An internet native payments protocol"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "T402 Team", email = "dev@t402.io" }
]
requires-python = ">=3.10"
keywords = ["t402", "sdk", "crypto", "usdt", "payments", "web3", "tether"]
dependencies = [
    "eth-account>=0.13.7",
    "eth-typing>=4.0.0",
    "eth-utils>=3.0.0",
    "fastapi[standard]>=0.115.12",
    "flask>=3.0.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "web3>=6.0.0",
]

[project.scripts]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/t402"]

[tool.hatch.metadata]
allow-direct-references = true
