[project]
name = "t402-httpx-e2e"
version = "0.1.0"
description = "Python httpx client for t402 e2e tests"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "eth-account>=0.8.0",
    "python-dotenv>=1.0.0",
    "t402"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false

[tool.uv.sources]
t402 = { path = "../../../../python/t402", editable = true } 