[project]
name = "t402-requests-e2e"
version = "0.1.0"
description = "Python requests client for t402 e2e tests"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "eth-account>=0.8.0",
    "python-dotenv>=1.0.0",
    "t402"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false 

[tool.uv.sources]
t402 = { path = "../../../../python/t402", editable = true } 