[project]
name = "client-discovery-example"
version = "0.1.0"
description = "Example of using the t402 discovery layer"
requires-python = ">=3.10"
dependencies = [
    "t402",
    "cdp-sdk>=1.31.2",
    "Flask>=3.1.1",
    "uvicorn>=0.27.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false

[tool.uv.sources]
t402 = { path = "../../../python/t402", editable = true } 