[project]
name = "t402-requests-example"
version = "0.1.0"
description = "Example of using t402 with requests"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "eth-account>=0.8.0",
    "t402"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false

[tool.uv.sources]
t402 = { path = "../../../../python/t402", editable = true } 